Додавання стилів секціям хортфоліо і фотер

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
               </h3>
               <p class="text-main-section text-portfolio">Marketing</p>
             </li>
-            <li class="main-item-portfolio meditation">
+            <li class="main-item-portfolio">
               <img
                 class="images-portfolio"
                 src="./images/MeditationApp.jpg"
@@ -235,7 +235,7 @@
               </h3>
               <p class="text-main-section text-portfolio">Design</p>
             </li>
-            <li class="main-item-portfolio online-courses">
+            <li class="main-item-portfolio">
               <img
                 class="images-portfolio"
                 src="./images/OnlineCourses.jpg"
@@ -254,14 +254,16 @@
     </main>
 
     <!-- Footer -->
-    <footer class="final-info">
-      <a class="logo" href="./index.html"
-        >Web<span class="final-logo">Studio</span></a
-      >
-      <p class="text-final-info">
-        Increase the flow of customers and sales for your business with digital
-        marketing &amp; growth solutions.
-      </p>
+    <footer class="wrapper final-info">
+      <div class="container">
+        <a class="logo" href="./index.html"
+          >Web<span class="final-logo">Studio</span></a
+        >
+        <p class="text-final-info">
+          Increase the flow of customers and sales for your business with
+          digital marketing &amp; growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
