--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <!-- Heder -->
 
-    <header class="wrapper">
+    <header class="header wrapper">
       <div class="container container-header">
         <nav class="header-nav-menu">
           <a class="logo" href="./index.html"
@@ -40,17 +40,15 @@
             </li>
           </ul>
         </nav>
-        <address class="header-info">
+        <address>
           <ul class="header-list">
             <li class="header-list-item">
-              <a
-                class="header-list-link link-info"
-                href="mailto:info@devstudio.com"
+              <a class="link-info" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li class="header-list-item link-info">
-              <a class="header-list-link link-info" href="tel:+110001111111"
+            <li class="header-list-item">
+              <a class="link-info" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
             </li>
@@ -60,19 +58,22 @@
     </header>
 
     <!-- Main -->
+
     <main class="wrapper">
       <!-- Hero section -->
+
       <section class="hero-section">
-        <div class="container-hero-section">
+        <div class="container-hero-section container">
           <h1 class="tittle-main">Effective Solutions for Your Business</h1>
           <button class="button-service" type="button">Order Service</button>
         </div>
       </section>
 
       <!-- Section hidden Our advantages -->
-      <section class="main-section">
-        <h2 class="visually-hidden">Our advantages</h2>
+
+      <section class="main-section-advantages">
         <div class="container">
+          <h2 class="visually-hidden">Our advantages</h2>
           <ul class="main-list-advantages">
             <li class="main-item-advantages">
               <h3 class="subtittle-main-section">Strategy</h3>
@@ -95,7 +96,7 @@
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="main-item-advantages">
+            <li class="main-item-advantages item-advantages">
               <h3 class="subtittle-main-section">Technologies</h3>
               <p class="text-main-section">
                 Design practice focused on digital experiences. We bring forth a
@@ -107,7 +108,8 @@
       </section>
 
       <!-- Section Our Team -->
-      <section class="section-team main-section">
+
+      <section class="section-team">
         <div class="container">
           <h2 class="tittle-main-section">Our Team</h2>
           <ul class="main-list-team">
@@ -119,10 +121,12 @@
                 width="264"
                 height="260"
               />
-              <h3 class="subtittle-main-section subtittle-team">
-                Mark Guerrero
-              </h3>
-              <p class="text-main-section text-team">Product Designer</p>
+              <div class="name-profession">
+                <h3 class="subtittle-main-section subtittle-team">
+                  Mark Guerrero
+                </h3>
+                <p class="text-main-section text-team">Product Designer</p>
+              </div>
             </li>
             <li class="main-item-team">
               <img
@@ -132,8 +136,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="subtittle-main-section subtittle-team">Tom Ford</h3>
-              <p class="text-main-section text-team">Frontend Developer</p>
+              <div class="name-profession">
+                <h3 class="subtittle-main-section subtittle-team">Tom Ford</h3>
+                <p class="text-main-section text-team">Frontend Developer</p>
+              </div>
             </li>
             <li class="main-item-team">
               <img
@@ -143,10 +149,12 @@
                 width="264"
                 height="260"
               />
-              <h3 class="subtittle-main-section subtittle-team">
-                Camila Garcia
-              </h3>
-              <p class="text-main-section text-team">Marketing</p>
+              <div class="name-profession">
+                <h3 class="subtittle-main-section subtittle-team">
+                  Camila Garcia
+                </h3>
+                <p class="text-main-section text-team">Marketing</p>
+              </div>
             </li>
             <li class="main-item-team">
               <img
@@ -156,17 +164,20 @@
                 width="264"
                 height="260"
               />
-              <h3 class="subtittle-main-section subtittle-team">
-                Daniel Wilson
-              </h3>
-              <p class="text-main-section text-team">UI Designer</p>
+              <div class="name-profession">
+                <h3 class="subtittle-main-section subtittle-team">
+                  Daniel Wilson
+                </h3>
+                <p class="text-main-section text-team">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
       </section>
 
       <!-- Section Our Portfolio -->
-      <section class="main-section">
+
+      <section>
         <div class="container">
           <h2 class="tittle-main-section">Our Portfolio</h2>
           <ul class="main-list-portfolio">
@@ -178,10 +189,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="subtittle-main-section subtittle-portfolio">
-                Banking App
-              </h3>
-              <p class="text-main-section text-portfolio">App</p>
+              <div class="portfolio-category">
+                <h3 class="subtittle-main-section">Banking App</h3>
+                <p class="text-main-section">App</p>
+              </div>
             </li>
             <li class="main-item-portfolio">
               <img
@@ -191,10 +202,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="subtittle-main-section subtittle-portfolio">
-                Cashless Payment
-              </h3>
-              <p class="text-main-section text-portfolio">Marketing</p>
+              <div class="portfolio-category">
+                <h3 class="subtittle-main-section">Cashless Payment</h3>
+                <p class="text-main-section">Marketing</p>
+              </div>
             </li>
             <li class="main-item-portfolio">
               <img
@@ -204,10 +215,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="subtittle-main-section subtittle-portfolio">
-                Meditation App
-              </h3>
-              <p class="text-main-section text-portfolio">App</p>
+              <div class="portfolio-category">
+                <h3 class="subtittle-main-section">Meditation App</h3>
+                <p class="text-main-section">App</p>
+              </div>
             </li>
             <li class="main-item-portfolio">
               <img
@@ -217,10 +228,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="subtittle-main-section subtittle-portfolio">
-                Taxi Service
-              </h3>
-              <p class="text-main-section text-portfolio">Marketing</p>
+              <div class="portfolio-category">
+                <h3 class="subtittle-main-section">Taxi Service</h3>
+                <p class="text-main-section">Marketing</p>
+              </div>
             </li>
             <li class="main-item-portfolio">
               <img
@@ -230,10 +241,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="subtittle-main-section subtittle-portfolio">
-                Screen Illustrations
-              </h3>
-              <p class="text-main-section text-portfolio">Design</p>
+              <div class="portfolio-category">
+                <h3 class="subtittle-main-section">Screen Illustrations</h3>
+                <p class="text-main-section">Design</p>
+              </div>
             </li>
             <li class="main-item-portfolio">
               <img
@@ -243,10 +254,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="subtittle-main-section subtittle-portfolio">
-                Online Courses
-              </h3>
-              <p class="text-main-section text-portfolio">Marketing</p>
+              <div class="portfolio-category">
+                <h3 class="subtittle-main-section">Online Courses</h3>
+                <p class="text-main-section">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -256,7 +267,7 @@
     <!-- Footer -->
     <footer class="wrapper final-info">
       <div class="container">
-        <a class="logo" href="./index.html"
+        <a class="logo logo-footer" href="./index.html"
           >Web<span class="final-logo">Studio</span></a
         >
         <p class="text-final-info">
