I set general paddings for the sections, paddings in the header, inline-block logo in the footer

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <li class="header-list-item">
               <a class="header-list-link" href="">Portfolio</a>
             </li>
-            <li class="header-list-item item-contacts">
+            <li class="header-list-item">
               <a class="header-list-link" href="">Contacts</a>
             </li>
           </ul>
@@ -71,7 +71,7 @@
 
       <!-- Section hidden Our advantages -->
 
-      <section class="main-section-advantages">
+      <section class="main-section">
         <div class="container">
           <h2 class="visually-hidden">Our advantages</h2>
           <ul class="main-list-advantages">
@@ -109,7 +109,7 @@
 
       <!-- Section Our Team -->
 
-      <section class="section-team">
+      <section class="section-team main-section">
         <div class="container">
           <h2 class="tittle-main-section">Our Team</h2>
           <ul class="main-list-team">
@@ -177,7 +177,7 @@
 
       <!-- Section Our Portfolio -->
 
-      <section>
+      <section class="main-section">
         <div class="container">
           <h2 class="tittle-main-section">Our Portfolio</h2>
           <ul class="main-list-portfolio">
