Internal indents for content

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="main-item-advantages item-advantages">
+            <li class="main-item-advantages">
               <h3 class="subtittle-main-section">Technologies</h3>
               <p class="text-main-section">
                 Design practice focused on digital experiences. We bring forth a
