Replacement of names hero-section, section, replacement of max-width in container

--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
 
       <section class="hero-section">
         <div class="container-hero-section container">
-          <h1 class="tittle-main">Effective Solutions for Your Business</h1>
+          <h1 class="hero-tittle">Effective Solutions for Your Business</h1>
           <button class="button-service" type="button">Order Service</button>
         </div>
       </section>
 
       <!-- Section hidden Our advantages -->
 
-      <section class="main-section">
+      <section class="section">
         <div class="container">
           <h2 class="visually-hidden">Our advantages</h2>
           <ul class="main-list-advantages">
@@ -109,7 +109,7 @@
 
       <!-- Section Our Team -->
 
-      <section class="section-team main-section">
+      <section class="section-team section">
         <div class="container">
           <h2 class="tittle-main-section">Our Team</h2>
           <ul class="main-list-team">
@@ -177,7 +177,7 @@
 
       <!-- Section Our Portfolio -->
 
-      <section class="main-section">
+      <section class="section">
         <div class="container">
           <h2 class="tittle-main-section">Our Portfolio</h2>
           <ul class="main-list-portfolio">
